--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -188,3 +188,41 @@ footer a {
   }
   
 }
+
+@media (prefers-color-scheme: dark) {
+  body {
+      background-color: rgb(197, 197, 197);
+  }
+  footer {
+    background-color: #64af7a;
+    border: rgb(136, 67, 35);
+    border-style: solid;
+  }
+
+  .grid_container img {
+    background-color: #64af7a;
+    border: rgb(136, 67, 35);
+    border-style: solid;
+  }
+  
+  .flex_container img {
+    background-color: #64af7a;
+    border: rgb(136, 67, 35);
+    border-style: solid;
+  }
+
+  article img {
+    background-color: #64af7a;
+    border: rgb(136, 67, 35);
+    border-style: solid;
+  }
+
+  h2 {
+    color: rgb(43, 18, 6);
+}
+
+footer a {
+  color: rgb(43, 18, 6);
+}
+
+}
