--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -31,6 +31,7 @@ body {
     flex-direction: column;
     list-style-type: none;
     list-style: none;
+    align-items: center;
   }
 
   nav li {
