--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,3 +1,25 @@
+* {
+  margin: 0;
+  padding: 0;
+  }
+
+video#bgvid {
+  opacity: 20%;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  overflow: hidden;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  z-index: -100;
+  -ms-transform: translateX(-50%) translateY(-50%);
+  -moz-transform: translateX(-50%) translateY(-50%);
+  -webkit-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
+}
+
 body {
     background-color: rgb(243, 232, 232);
     display: flex;
@@ -35,7 +57,7 @@ body {
   }
 
   nav li {
-    margin: 10px 10px;
+    margin: 20px 20px;
   }
   
   nav a {
@@ -62,6 +84,7 @@ a:hover img {
 }
 
 h1 {
+    margin: 20px 0px;
     background-image: linear-gradient(to bottom, rgb(229 114 59), rgb(255 183 91));
     padding-top: 1%;
     padding-bottom: 1%;
@@ -78,8 +101,9 @@ figcaption {
 }
 
 article img {
+  margin: 20px 10px;
   width: 75%;
-  position: relative;
+  
   top: 1%;
   border: rgb(229, 114, 59);
   border-style: solid;
@@ -102,7 +126,7 @@ article img {
     border: rgb(229, 114, 59);
     border-style: solid;
     border-width: 5px;
-    padding: 10px;
+    padding: 7px;
     background-color: #b7ffcd;
   }
 
@@ -131,6 +155,7 @@ article img {
   }
 
 h2 {
+    margin: 10px;
     text-align: center;
     color: rgb(145, 72, 4);
 }
@@ -139,14 +164,19 @@ h2 {
   text-align: center;
 }
 
+p {
+  margin: 10px;
+}
+
 footer {
   background-color: #b7ffcd;
   border: rgb(229, 114, 59);
   border-style: solid;
-  border-width: 3px;
+  border-width: 4px;
 }
 
 footer ul {
+  margin: 5px 0px;
   font-size: 1.2em;
   display: flex;
   flex-direction: column;
@@ -192,38 +222,55 @@ footer a {
 
 @media (prefers-color-scheme: dark) {
   body {
-      background-color: rgb(197, 197, 197);
+      background-color: rgb(71, 71, 71);
   }
+
+  p {
+    color: azure;
+  }
+
+  p a {
+    color: aqua;
+  }
+  
+  .flex_container a {
+    color: azure;
+  }
+
   footer {
-    background-color: #64af7a;
-    border: rgb(136, 67, 35);
+    background-color: #2b2929;
+    border: rgb(229 114 59);
     border-style: solid;
   }
 
+  footer ul {
+    color: aqua;
+  }
+
+  footer ul li a {
+    color: azure;
+  }
+
   .grid_container img {
-    background-color: #64af7a;
+    background-color: #000000;
     border: rgb(136, 67, 35);
     border-style: solid;
   }
   
   .flex_container img {
-    background-color: #64af7a;
-    border: rgb(136, 67, 35);
+    background-color: #000000;
+    border: rgb(229, 114, 59);
     border-style: solid;
   }
 
   article img {
-    background-color: #64af7a;
-    border: rgb(136, 67, 35);
+    background-color: #000000;
+    border: rgb(229 114 59);
     border-style: solid;
   }
 
   h2 {
-    color: rgb(43, 18, 6);
-}
-
-footer a {
-  color: rgb(43, 18, 6);
+    color: rgb(221, 218, 217);
 }
 
 }
