--- a/mod3_solution/css/styles.css
+++ b/mod3_solution/css/styles.css
@@ -9,7 +9,7 @@ body {
   background-color: #e9a404;
   border-radius: 0;
   border: 0;
-  padding-bottom: 25px;
+  padding-bottom: 10px;
 }
 
 .navbar-brand {
@@ -24,6 +24,10 @@ body {
   margin-top: 0;
   margin-bottom: 0;
   line-height: .75;
+}
+
+#nav-list {
+  background-color: #addda6;
 }
 
 #nav-list a {
